move navbar out of views

--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -47,12 +47,13 @@ body {
 	}
 }
 
-main {
+.container {
+	display: block;
 	box-sizing: border-box;
 	width: 90rem;
 	max-width: 100%;
 	margin: 0 auto;
-	padding: 2rem var(--container-padding);
+	padding: 3rem var(--container-padding);
 }
 
 h1 {
