--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -53,11 +53,19 @@ body {
 	width: 90rem;
 	max-width: 100%;
 	margin: 0 auto;
-	padding: 3rem var(--container-padding);
+	padding: 5rem var(--container-padding);
 }
 
 h1 {
+	display: flex;
+	align-items: center;
+	gap: 0.4em;
 	font-size: 1.75rem;
 	font-weight: 520;
 	margin: 0 0 1.5rem 0;
+
+	& a {
+		text-decoration: none;
+		color: inherit;
+	}
 }
