--- a/src/client/style/card.less
+++ b/src/client/style/card.less
@@ -31,6 +31,9 @@
 	}
 
 	&__title {
+		display: flex;
+		align-items: center;
+		gap: 0.5em;
 		font-size: 1rem;
 		padding-bottom: 1em;
 		flex-grow: 1;
