--- a/src/client/style/card.less
+++ b/src/client/style/card.less
@@ -10,6 +10,7 @@
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
+	min-height: 10rem;
 	padding: 0.9rem 1rem;
 	background-color: var(--card-bg);
 	transition: background-color 0.2s;
