--- a/src/client/style/grid.less
+++ b/src/client/style/grid.less
@@ -10,12 +10,14 @@
 	grid-template-columns: repeat(auto-fill, minmax(var(--min, 15rem), 1fr));
 	gap: 2px;
 	background-color: var(--card-bg);
+	border-radius: 0.8rem;
+	overflow: hidden;
 
 	&--large {
-		--min: 44rem;
+		--min: 40rem;
 	}
 
-	&__item-span-2 {
-		grid-column: 1 / span 2;
+	&__item-span-row {
+		grid-column: 1 / -1;
 	}
 }
